--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ getCurrentLocation();
   let bodyMoving = null;
 
   // Check movement for each potentiometer
-  for (int i = 0; i < numPotentiometers; i++) {
+  for (let i = 0; i < numPotentiometers; i++) {
     // Check movement based on potentiometer position and its corresponding label
     if (labels[i].equals("HEAD")) {
       // Movement detection for head (up and down movement)
