--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@ getCurrentLocation();
 
 function displayMovementText(message, x, y) {
   // Set text properties
-  fill(255); // White text color
+  fill(0); // Black text color
   textAlign(CENTER, CENTER);
   textSize(80); // Adjust text size as needed
 
