--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@ function displayMovementText(message, x, y) {
   // Set text properties
   fill(0); // Black text color
   textAlign(CENTER, CENTER);
-  textSize(80); // Adjust text size as needed
+  textSize(32); // Adjust text size as needed
 
   // Target the existing <div> element with the id "gestureDiv"
   var gestureDiv = document.getElementById('gestureDiv');
@@ -492,8 +492,8 @@ function displayMovementText(message, x, y) {
 
   // Create a new <div> element to contain the text
   var textDiv = document.createElement('div');
-  textDiv.style.color = '#fff'; // White text color
-  textDiv.style.fontSize = '80px'; // Adjust text size as needed
+  textDiv.style.color = '#0'; // White text color
+  textDiv.style.fontSize = '32px'; // Adjust text size as needed
   textDiv.innerText = message;
 
   // Append the <div> element to the existing "gestureDiv"
