--- a/index.html
+++ b/index.html
@@ -478,11 +478,6 @@ getCurrentLocation();
         }
 
 function displayMovementText(message, x, y) {
-  // Set text properties
-  fill(255); // White text color
-  textAlign(CENTER, CENTER);
-  textSize(80); // Adjust text size as needed
-
   // Target the existing <div> element with the id "gestureDiv"
   var gestureDiv = document.getElementById('gestureDiv');
   if (!gestureDiv) {
@@ -495,8 +490,8 @@ function displayMovementText(message, x, y) {
 
   // Create a new <div> element to contain the latest text
   var textDiv = document.createElement('div');
-  textDiv.style.color = '#fff'; // White text color
-  textDiv.style.fontSize = '80px'; // Adjust text size as needed
+  textDiv.style.color = '#000'; // Black text color
+  textDiv.style.fontSize = '32px'; // Adjust text size as needed
   textDiv.innerText = message;
 
   // Append the <div> element to the "gestureDiv"
