--- a/index.html
+++ b/index.html
@@ -458,25 +458,28 @@ getCurrentLocation();
       displayMovementText("Waist is moving left.", width / 2, height / 2 + 200);
     }
   }
-
+            
   // Add your custom logic for detecting body movement based on shoulders and legs
-  if (leftShoulderMovingUp != null && rightShoulderMovingUp != null && leftLegMovingUp != null && rightLegMovingUp != null) {
+if (leftShoulderMovingUp != null && rightShoulderMovingUp != null && leftLegMovingUp != null && rightLegMovingUp != null) {
     if (leftShoulderMovingUp && rightShoulderMovingUp && leftLegMovingUp && rightLegMovingUp) {
-      bodyMoving = true; // Body is moving up
+        bodyMoving = true; // Body is moving up
     } else if (!leftShoulderMovingUp && !rightShoulderMovingUp && !leftLegMovingUp && !rightLegMovingUp) {
-      bodyMoving = false; // Body is moving down
-    }
-  }
-
-  // Add your custom logic for displaying movement text based on detected body movement
-  if (bodyMoving != null) {
-    if (bodyMoving) {
-      displayMovementText("Body is moving up.", width / 2, height / 2 + 240);
+        bodyMoving = false; // Body is moving down
     } else {
-      displayMovementText("Body is moving down.", width / 2, height / 2 + 240);
+        bodyMoving = null; // Body movement cannot be determined
     }
-  }
+} else {
+    bodyMoving = null; // Body movement cannot be determined
+}
 
+// Add your custom logic for displaying movement text based on detected body movement
+if (bodyMoving != null) {
+    if (bodyMoving) {
+        displayMovementText("Body is moving up.", width / 2, height / 2 + 240);
+    } else {
+        displayMovementText("Body is moving down.", width / 2, height / 2 + 240);
+    }
+}
   // Update previous potentiometer values for the next iteration
   previousPotValues = potValues.slice(0, numPotentiometers);
         }
