--- a/index.html
+++ b/index.html
@@ -341,6 +341,8 @@ getCurrentLocation();
   let waistMoving = null;
   let bodyMoving = null;
 
+    let cooldownTimer = 0;
+
   // Check movement for each potentiometer
   for (let i = 0; i < numPotentiometers; i++) {
     // Check movement based on potentiometer position and its corresponding label
