--- a/index.html
+++ b/index.html
@@ -342,11 +342,15 @@ getCurrentLocation();
   let bodyMoving = null;
 
    // Define a cooldown duration (in milliseconds) after detecting waist or body movements
-const cooldownDuration = 3500; // 1 second
+const cooldownDuration = 3500; // 1 second            
 
 // Variable to track if the cooldown is active
 let cooldownActive = false;
 
+if (Date.now() < cooldownEndTime) {
+       // Cooldown period is still active, skip movement detection
+    return;
+}
   // Check movement for each potentiometer
   for (let i = 0; i < numPotentiometers; i++) {
     // Check movement based on potentiometer position and its corresponding label
@@ -460,16 +464,10 @@ let cooldownActive = false;
   if (waistMoving != null && rightLegMovingUp != null && leftLegMovingUp != null) {
     if (waistMoving) {
       displayMovementText("Waist is moving right.", width / 2, height / 2 + 200);
-            cooldownActive = true;
-        setTimeout(() => {
-            cooldownActive = false;
-    }, cooldownDuration);
+        cooldownEndTime = Date.now() + cooldownDuration;
     } else {
       displayMovementText("Waist is moving left.", width / 2, height / 2 + 200);
-            cooldownActive = true;
-        setTimeout(() => {
-            cooldownActive = false;
-    }, cooldownDuration);
+        cooldownEndTime = Date.now() + cooldownDuration;
     }
 
   }
@@ -478,16 +476,8 @@ let cooldownActive = false;
 if (leftShoulderMovingUp != null && rightShoulderMovingUp != null && leftLegMovingUp != null && rightLegMovingUp != null) {
     if (leftShoulderMovingUp && rightShoulderMovingUp && leftLegMovingUp && rightLegMovingUp) {
         bodyMoving = true; // Body is moving up
-        cooldownActive = true;
-        setTimeout(() => {
-            cooldownActive = false;
-        }, cooldownDuration);
     } else if (!leftShoulderMovingUp && !rightShoulderMovingUp && !leftLegMovingUp && !rightLegMovingUp) {
         bodyMoving = false; // Body is moving down
-        cooldownActive = true;
-        setTimeout(() => {
-            cooldownActive = false;
-        }, cooldownDuration);
     } else {
         bodyMoving = null; // Body movement cannot be determined
     }
