--- a/index.html
+++ b/index.html
@@ -14,32 +14,72 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js">
         </script>
         <style>
-            body { font-family: 'Roboto', sans-serif; } canvas { width: 100vw; height:
-            50vh; /* Adjusted height for better visibility */ } /* Button styles */
-            .button { background-color: #4CAF50; /* Green */ width: 45%; /* Adjust
-            the width as needed */ border: none; color: white; padding: 15px 32px;
-            text-align: center; text-decoration: none; display: inline-block; font-size:
-            16px; margin: 4px 2px; cursor: pointer; border-radius: 8px; font-family:
-            'Roboto', sans-serif; } /* Disconnect button style */ #connectButton {
-            background-color: #0082FC; /* Red */ } /* Find Closest Shop button style
-            */ #findClosestShopButton { background-color: #6EB183; /* Blue */ } #gestureDiv
-            { color: #000; /* Black text color */ font-size: 32px; /* Text size */
-            }
+        body {
+            font-family: 'Roboto', sans-serif;
+            margin: 0; /* Remove default margin */
+            padding: 0; /* Remove default padding */
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+        #avatarBTdiv {
+            margin-bottom: 20px;
+            position: relative;
+        }
+        #closestShop, #currentLocation, #gestureDiv {
+            width: 100%;
+            text-align: center;
+        }
+        .button {
+            background-color: #4CAF50; /* Green */
+            width: 45%; /* Adjust the width as needed */
+            border: none;
+            color: white;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+            border-radius: 8px;
+            font-family: 'Roboto', sans-serif;
+        }
+        /* Disconnect button style */
+        #connectButton {
+            background-color: #0082FC; /* Red */
+        }
+        /* Find Closest Shop button style */
+        #findClosestShopButton {
+            background-color: #6EB183; /* Blue */
+        }
+        #gestureDiv {
+            color: #000; /* Black text color */
+            font-size: 32px; /* Text size */
+            position: absolute; /* Position absolutely within its parent */
+            bottom: 0; /* Position at the bottom */
+            left: 0; /* Align to the left */
+            width: 100%; /* Take full width */
+        }
         </style>
     </head>
     
     <body>
-        <h1>
-            Avatar BT Debug
-        </h1>
+    <h1>Avatar BT Debug</h1>
+    <div id="avatarBTdiv">
         <!-- Connect Button -->
-        <button id="connectButton" class="button">
-            Connect to Avatar
-        </button>
+        <button id="connectButton" class="button">Connect to Avatar</button>
         <!-- Find Closest Shop Button -->
-        <button id="findClosestShopButton" class="button" onclick="findClosestShop()">
-            Find Closest Shop
-        </button>
+        <button id="findClosestShopButton" class="button" onclick="findClosestShop()">Find Closest Shop</button>
+    </div>
+    <!-- Div to display status of Avatar BT shop -->
+    <div id="closestShop"></div>
+    <!-- Coordinates-->
+    <div id="currentLocation"></div>
+    <!-- Movement>-->
+    <div id="gestureDiv"></div>
         <script>
             let characteristic;
             let isConnected = false; // Track connection state
@@ -550,18 +590,5 @@
                 backgroundColors[7] = color(0, 0, 0, 100); // 60% black
             }
         </script>
-        <!-- Div to display status of Avatar BT shop -->
-        <div id="avatarBTdiv">
-        </div>
-        <!-- Div to display closest shop -->
-        <div id="closestShop">
-        </div>
-        <!-- Coordinates-->
-        <div id="currentLocation">
-        </div>
-        <!-- Movement>-->
-        <div id="gestureDiv">
-        </div>
     </body>
-
 </html>
