--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
             let characteristic;
             let isConnected = false; // Track connection state
             let device; // Declare device variable
-            async
-            function connectToDevice() {
+            
+            async function connectToDevice() {
                 try {
                     if (!isConnected) {
                         // Request Bluetooth device
